--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
     </div>
 
     <!-- Notification -->
-    <div class="notification-container show" id="notification-container">
+    <div class="notification-container" id="notification-container">
         <p>You have already entered this letter</p>
     </div>
+
+    <footer class="footer"><a href="https://oscarzúñiga.com" target="_blank">Oscar Zúñiga</a></footer>
     <script src="hangman.js"></script>
 </body>
 </html>
